<resources>
    <string name="app_name">How</string>

    <!--change password activity strings-->
    <string name="prompt_current_pass">Current Password</string>
    <string name="prompt_new_pass">New Password</string>
    <string name="prompt_confirm_pass">Confirm New Password</string>

    <!--menu item titles' text-->
    <string name="menu_item_done">Done</string>
    <string name="menu_item_account">Switch Account</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_terms_privacy">Terms and Privacy</string>
    <string name="menu_item_help_feedback">Help and feedback</string>
    <string name="menu_item_sign_out">Sign out</string>

    <!--home activity strings-->
    <string name="title_categories">Categories</string>
    <string name="title_most_watched">Most Watched</string>
    <string name="title_interests">Interests</string>
    <string name="title_suggestions">Suggestions</string>

    <!--main activity strings-->
    <string name="text_sign_in">Sign In</string>
    <string name="text_sign_up">Sign Up</string>

    <!--sign in activity strings-->
    <string name="hint_user_name">Email or Username</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign In</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_get_help">Get Help</string>
    <string name="text_or">OR</string>
    <string name="text_have_account">Don\'t have an account?</string>

    <!--sign up activity strings-->
    <string name="hint_username">Username</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="text_agreement">l agree with </string>
    <string name="text_terms_privacy">Terms and Privacy</string>

    <!--video activity strings-->
    <string name="text_comment">Write a comment..</string>

    <!--forgot password activity strings-->
    <string name="reset_button_text">Reset Password</string>
    <string name="text_forgot_pass">Forgot Password ?</string>
    <string name="text_forgot_pass2">We just need your email</string>
    <string name="text_forgot_pass3">so we can send your reset password</string>

    <!--interests activity strings-->
    <string name="text_choose_interests">Choose Interests..</string>
    <string name="text_interests1">Add Your Interests</string>
    <string name="text_interests2">Enter what you like,</string>
    <string name="text_interests3">and what you are interested in</string>

    <string-array name="interests_array">
        <item>Electronics</item>
        <item>Computer</item>
        <item>Phone</item>
        <item>Carpentering</item>
        <item>Plumbing</item>
        <item>Painting</item>
    </string-array>

    <!--row of items -->
    <string name="text_place_holder">Place Holder</string>

    <!--bottom navigation menu items' titles-->
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="title_notifications">Notifications</string>

    <!--preferences strings-->
    <string name="key_user_name">user_name_key</string>
    <string name="key_change_password">change_password_key</string>
    <string name="key_email">email_key</string>
    <string name="key_phone">phone_key</string>
    <string name="key_clear_history">clear_history_key</string>
    <string name="key_switch_language">switch_language_key</string>
    <string name="title_user_name">Change Username</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_email">Change Email Address</string>
    <string name="title_phone">Change Phone Number</string>
    <string name="title_clear_history">Clear History</string>
    <string name="title_switch_language">English Language</string>

    <!--generated text for terms/privacy and help/feedback-->
    <string name="loremParagraph1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Etiam non lacinia eros. In et urna sit amet dui tempus consectetur luctus quis quam.
        Vivamus accumsan nunc in tortor elementum laoreet.</string>
    <string name="loremParagraph2">Vivamus ac nisl velit. Orci varius natoque penatibus et magnis
        dis parturient montes, nascetur ridiculus mus. Suspendisse potenti.</string>
    <string name="loremlist1">1. Ut nec purus eget nulla sodales ullamcorper.</string>
    <string name="loremlist2">2. Donec ultricies diam quis arcu blandit porta.</string>
    <string name="loremlist3">3. Nullam vitae ipsum scelerisque elit fermentum fringilla.</string>
    <string name="loremlist4">4. Morbi a sapien consequat, maximus dolor quis, aliquam nulla.</string>
    <string name="loremlist5">5. Mauris luctus erat quis risus venenatis tristique eget scelerisque diam.</string>


    <!-- strings for profile activity list -->
    <string name="my_list">My List</string>
    <string name="likes">Likes</string>
    <string name="download">Download</string>
    <string name="history">History</string>


    <!-- string to use for connecting to facebook server -->
    <string name="facebook_app_id">332784520852930</string>
    <string name="fb_login_protocol_scheme">fb332784520852930</string>

</resources>
