<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ChangePasswordActivity">

    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_item_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:orderInCategory="200"
        android:title="@string/menu_item_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_terms_privacy"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:orderInCategory="300"
        android:title="@string/menu_item_terms_privacy"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help_feedback"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:orderInCategory="400"
        android:title="@string/menu_item_help_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sign_out"
        android:icon="@drawable/ic_power_settings_new_black_24dp"
        android:orderInCategory="500"
        android:title="@string/menu_item_sign_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="1"
        android:title="@string/menu_item_sign_out"
        app:showAsAction="always" />


</menu>