<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingEnd="@dimen/activity_padding"
        android:paddingStart="@dimen/activity_padding"
        android:paddingTop="@dimen/activity_padding">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="@dimen/horizontal_margin"
            android:src="@mipmap/logo2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/horizontal_margin_short"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_first_name"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_marginBottom="@dimen/horizontal_margin_short"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/input_last_name"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_marginBottom="@dimen/horizontal_margin_short"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName" />

        </LinearLayout>

        <EditText
            android:id="@+id/input_phone_number"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/horizontal_margin_short"
            android:hint="@string/hint_phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/input_email_address"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/horizontal_margin_short"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/input_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/horizontal_margin_short"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_agreement" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:onClick="checkTerms"
                android:text="@string/text_terms_privacy"
                android:textColor="?attr/textColorPrimary"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/button_signUp2"
            style="@style/ButtonStyle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/horizontal_margin"
            android:gravity="center"
            android:text="@string/text_sign_up"
            android:onClick="signUp"/>

        <LinearLayout
            android:id="@+id/layout_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_forgot_password"
            android:layout_marginTop="@dimen/horizontal_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/horizontal_margin"
                android:layout_marginEnd="@dimen/vertical_margin_short"
                android:layout_marginStart="@dimen/vertical_margin_short"
                android:layout_marginTop="@dimen/horizontal_margin"
                android:layout_weight="4"
                android:background="#929292" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_or"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/horizontal_margin"
                android:layout_marginEnd="@dimen/vertical_margin_short"
                android:layout_marginStart="@dimen/vertical_margin_short"
                android:layout_marginTop="@dimen/horizontal_margin"
                android:layout_weight="4"
                android:background="#929292" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/horizontal_margin_short"
            android:layout_marginBottom="@dimen/horizontal_margin"
            android:text="singin with facebook" />

    </LinearLayout>
</ScrollView>