<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    android:padding="@dimen/horizontal_margin"
    tools:context="com.brightstars.android.how.ForgotPassActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/horizontal_margin"
            android:layout_marginBottom="24dp"
            android:text="@string/text_forgot_pass"
            android:textColor="?attr/textColorPrimaryInverse"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/horizontal_margin"
            android:text="@string/text_forgot_pass2"
            android:textColor="?attr/textColorPrimaryInverse"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/text_forgot_pass3"
            android:textColor="?attr/textColorPrimaryInverse"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/email_reset_editText"
                style="@style/EditTextStyle2"
                android:layout_width="match_parent"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/email_reset_button"
                style="@style/ButtonStyle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_button_text" />

        </FrameLayout>
    </LinearLayout>

</LinearLayout>
