<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/change_pass_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:stateListAnimator="@null"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/vertical_margin"
        android:layout_marginRight="@dimen/vertical_margin"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/current_password_field"
            style="@style/EditTextStyle2"
            android:layout_width="match_parent"
            android:hint="@string/prompt_current_pass"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/new_password_field"
            style="@style/EditTextStyle2"
            android:layout_width="match_parent"
            android:hint="@string/prompt_new_pass"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirm_password_field"
            style="@style/EditTextStyle2"
            android:layout_width="match_parent"
            android:hint="@string/prompt_confirm_pass"
            android:inputType="textPassword" />

    </LinearLayout>

</LinearLayout>