<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    android:padding="@dimen/horizontal_margin"
    tools:context="com.brightstars.android.how.ForgotPassActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text1_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/horizontal_margin"
            android:layout_marginBottom="24dp"
            android:text="@string/text_interests1"
            android:textColor="?attr/textColorPrimaryInverse"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/horizontal_margin"
            android:text="@string/text_interests2"
            android:textColor="?attr/textColorPrimaryInverse"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text3_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/text_interests3"
            android:textColor="?attr/textColorPrimaryInverse"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Spinner
            android:id="@+id/interests_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/interests_array"
            android:padding="@dimen/horizontal_margin_short"
            android:prompt="@string/text_choose_interests" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/interests_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/horizontal_margin"
            android:clickable="true"
            app:srcCompat="@drawable/ic_arrow_forward_white_24dp" />

    </RelativeLayout>

</LinearLayout>
