<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.brightstars.android.how.HomeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/home_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:stateListAnimator="@null"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_below="@id/home_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/horizontal_margin"
            android:text="@string/title_categories"
            android:textSize="24sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/horizontal_margin"
            android:text="@string/title_interests"
            android:textSize="24sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_interests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/horizontal_margin"
            android:text="@string/title_most_watched"
            android:textSize="24sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_most_watched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">



        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/horizontal_margin"
            android:text="@string/title_suggestions"
            android:textSize="24sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_suggestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>


</RelativeLayout>
