<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_margin="8dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:padding="@dimen/horizontal_margin_short"
        android:src="@drawable/ic_launcher_background" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:onClick="editProfile"
        android:text="Name"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/editTextStrokeColor" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/ic_format_list_bulleted_black_24dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:onClick="showMyList"
        android:text="@string/my_list"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/editTextStrokeColor" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/ic_stars_black_24dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:onClick="showMyLikes"
        android:text="@string/likes"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/editTextStrokeColor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/ic_file_download_black_24dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:onClick="showMyDownloads"
        android:text="@string/download"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/editTextStrokeColor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:width="15dp"
        android:height="15dp"
        android:drawableLeft="@drawable/ic_history_black_24dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:onClick="showMyHistory"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:text="@string/history"
        android:textSize="16dp" />


</LinearLayout>